--- a/src/main/webapp/i18n/en/userInfo.json
+++ b/src/main/webapp/i18n/en/userInfo.json
@@ -1,29 +1,31 @@
-
 {
-    "runningcoinCsApp": {
-        "userInfo" : {
-            "home": {
-                "title": "User Infos",
-                "createLabel": "Create a new User Info",
-                "createOrEditLabel": "Create or edit a User Info"
-            },
-            "created": "A new User Info is created with identifier {{ param }}",
-            "updated": "A User Info is updated with identifier {{ param }}",
-            "deleted": "A User Info is deleted with identifier {{ param }}",
-            "delete": {
-                "question": "Are you sure you want to delete User Info {{ id }}?"
-            },
-            "detail": {
-                "title": "User Info"
-            },
-            "userName": "User Name",
-            "statusField": "Status Field",
-            "role": "Role",
-            "coins": "Coins",
-            "icon": "Icon",
-            "totalDistance": "Total Distance",
-            "metaData": "Meta Data",
-            "openId": "Open Id"
-        }
+  "runningcoinCsApp": {
+    "userInfo": {
+      "home": {
+        "title": "User Infos",
+        "createLabel": "Create a new User Info",
+        "createOrEditLabel": "Create or edit a User Info"
+      },
+      "created": "A new User Info is created with identifier {{ param }}",
+      "updated": "A User Info is updated with identifier {{ param }}",
+      "deleted": "A User Info is deleted with identifier {{ param }}",
+      "delete": {
+        "question": "Are you sure you want to delete User Info {{ id }}?"
+      },
+      "changeStatus": {
+        "question": "Are you sure you want to Change User Info status {{ id }}?"
+      },
+      "detail": {
+        "title": "User Info"
+      },
+      "userName": "User Name",
+      "statusField": "Status Field",
+      "role": "Role",
+      "coins": "Coins",
+      "icon": "Icon",
+      "totalDistance": "Total Distance",
+      "metaData": "Meta Data",
+      "openId": "Open Id"
     }
+  }
 }
